--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
@@ -18,18 +18,23 @@
         xmlns:p="http://primefaces.org/ui">
     <!-- edit dialog -->
     <p:dialog widgetVar="editTemplateDialog"
-              header="#{empty ProcessForm.templateProperty.title ? msgs.addTemplateProperty : msgs.propertyEdit}"
-              width="700px"
+              width="480px"
               modal="true"
+              resizable="false"
               dynamic="true"
               styleClass="editDialog">
         <h:form id="templatePropertyForm">
             <p:panelGrid columns="1" layout="grid">
                 <p:row>
+                    <h3>#{empty ProcessForm.templateProperty.title ? msgs.addTemplateProperty : msgs.propertyEdit}</h3>
                     <div>
-                        <p:outputLabel for="templatePropertyTitle" value="#{msgs.title}" />
-                        <p:inputText id="templatePropertyTitle" value="#{ProcessForm.templateProperty.title}"
-                                     placeholder="#{msgs.title}" required="true" styleClass="input editDialog"/>
+                        <p:outputLabel for="templatePropertyTitle"
+                                       value="#{msgs.title}" />
+                        <p:inputText id="templatePropertyTitle"
+                                     value="#{ProcessForm.templateProperty.title}"
+                                     placeholder="#{msgs.title}"
+                                     required="#{not empty param['templatePropertyForm:save']}"
+                                     styleClass="input editDialog"/>
                     </div>
                     <div>
                         <p:outputLabel for="templatePropertyValue" value="#{msgs.value}" />
@@ -41,7 +46,13 @@
                                      update="editForm"
                                      oncomplete="PF('editTemplateDialog').hide();toggleSave()"
                                      value="#{msgs.apply}"
-                                     styleClass="right"/>
+                                     styleClass="primary right"/>
+                    <p:commandButton id="cancel"
+                                     onclick="PF('editTemplateDialog').hide();"
+                                     value="#{msgs.cancel}"
+                                     icon="fa fa-times fa-lg"
+                                     iconPos="right"
+                                     styleClass="secondary right"/>
                 </p:row>
             </p:panelGrid>
         </h:form>
